acrescimo de um type no script

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </div>
     </main>
 
-    <script src="./src/js/index.js"></script>
+    <script type="text/javascript" src="./src/js/index.js"></script>
 </body>
 </html>
