--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                         <li>
                             <a href="https://github.com/jeovan-delavechea" target="_blank" class="github">GitHub</a>
                         </li>
+                        <li>
+                            <a href="http://wa.me/5521969063050" target="_blank" class="whatsapp">WhatsApp</a>
+                        </li>
+                        <li>
+                            <a href="mailto: jeovan.delavechea@gmail.com" target="_blank" class="gmail">Gmail</a>
+                        </li>
                     </ul>
                 </div>
             </div>
