--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/estilos.css">
+
+    <link rel="stylesheet" href="src/css/principal.css">
+    <link rel="stylesheet" href="src/css/projetos.css">
+    <link rel="stylesheet" href="src/css/redes.css">
     <link rel="stylesheet" href="src/css/rolagem.css">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
     <title>Mini Portfólio - Jeovan Delavechea</title>
@@ -18,7 +22,7 @@
 <body>
     <main class="cartao">
         <div class="minhas-informacoes">
-            <img src="./src/imagens/Perfil-Jeovan_cropped.jpeg" alt="foto de perfil">
+            <img class="outer-shadow" src="./src/imagens/Perfil-Jeovan_cropped.jpeg" alt="foto de perfil">
             <h1 class="nome">Jeovan Delavechea</h1>
             <H2 class="cargo"><span>Desenvolvedor Frontend</span></H2>
         </div>
@@ -124,7 +128,7 @@
                             <div class="caixas-container">
                             </div>
 
-                            <button class="botao-navegacao" id="direito">&gt;</button>
+                            <button class="botao-navegacao ativado" id="direito">&gt;</button>
                         </div>
                     </div>
                 </div>
