--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                     <ul class="descricao redes-sociais">
                         <li>
-                            <a href="https://drive.google.com/file/d/1pEEXiTXtCh7K92u3GGH7qp94_3n2Fr7Q/view?usp=share_link"
+                            <a href="https://drive.google.com/file/d/1ZFeDNN28QgdWi8vwzuM0h5K39E7sOUNZ/view?usp=sharing"
                                 target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
